--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -29,8 +29,9 @@ body {
 }
 
 #top_logo {
-            height: 45px;            
+            height: 65px;            
             width:100%;
+            background-color: rgb( 33, 33, 33 );
             background-size:10px 100%;
             box-sizing:border-box;
             box-shaddow:0px 5px 10px BLACK;
@@ -52,27 +53,37 @@ body {
         }
 
         #hidden {
-            height:45px;
+            height:65px;
             position: relative;
             /*background-color:#0a4b60;*/
         }
         #logo {
             font-size:25px;
-            color:white;
+            color: rgb( 1, 182, 255 ) !important;
+            text-decoration: none;
           /*  font-family:'Gill Sans MT';*/
             float:right;
             display:inline;
-            padding:7.5px 30px;
+            padding:16px 30px;
+            font-family: "times new roman", arial;
+        }
+        #logo a:visited{
+            color: rgb( 1, 182, 255 ) !important;
+            text-decoration: none;
+        }
+        #logo a:hover{
+            color: rgb( 255,255,255 ) !important;
+            text-decoration: none;
         }
         #search {
             float:right;
-            padding:10px 50px;
+            padding:20px 50px;
             position: relative;
             
             
         }
         #search input   {
-            background:ao white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 7px 5px;
+            background:ao white url("http://cssdeck.com/uploads/media/items/5/5JuDgOa.png") 17px 5px;
             background-repeat: no-repeat;
             padding: 4px 10px 4px 25px;
         }
@@ -92,7 +103,7 @@ body {
             font-size:12px;
             float:left;
             margin: 0px 45px 0px 0px;
-            padding:15px 5px 15px 50px;
+            padding:25px 5px 15px 50px;
             border-radius: 0px;
             position: relative;
             height: 55px;
