--- a/client/app/club/club.css
+++ b/client/app/club/club.css
@@ -38,9 +38,10 @@
 }
 .list_heading{
     font-size:13px;
-    color:#337AB7;
-    border-bottom:2px solid #337AB7;
-    padding: 5px;
+    color:white;
+    background-color: rgb( 1, 192, 255 );
+    
+    padding: 5px !important;
     width: 100%;
     position: relative; 
     font-weight: bold;
