--- a/client/components/jqscripts/jqscripts.html
+++ b/client/components/jqscripts/jqscripts.html
@@ -2,7 +2,7 @@
 <script>
     $(document).ready(function(){
         
-            $("#gal_pic").css({"clip": 'rect(0px,'+$(window).width()+'px,'+$(window).height()+'px,0px)'});
+            $("#gal_pic").css({"clip": 'rect(0px,'+$(window).width()+'px,'+($(window).height()-85)+'px,0px)'});
             $("#pro_pic").css({"height": $(window).height()+'px'});
             $("md-sidenav").css({"height": $(window).height()+'px'});
       });
