--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -1,22 +1,43 @@
 <!--***************************Edit Gallerypic ********************************-->
 		<!-- Modal -->
-  <div class="modal img_modal fade" id="gal_pic_modal" role="dialog">
+  <div class="modal img_modal fade col-md-7" id="gal_pic_modal" role="dialog">
     <div class="modal-dialog img_modal-dialog" id="modal-center">
     
       <!-- Modal content-->
      
+     	<div class="modal-header bgbl">
+	       <button type="button" class="close colorb" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">X</button>
+	       <h3 class="modal-title colorb">Ola!</h3>
+	    </div>
         
-        <div class="modal-body img_modal-body centric glassy">
-        	<p>
-        		New Gallery Pic
-        		<button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
-        	</p>
-        	<form name="form" ng-submit="editProfile(form.galPicUrl,3)" ng-model="form">
-        		<div class="form-group">
-	          		<input type="text" ng-model="form.galPicUrl" placeholder="New Url of gallery Picture" class="form-control">
-	          	</div>
-	         <button type="submit" class="b2w">Submit</button>
-	         </form>
+        <div class="modal-body img_modal-body col-md-12 thumbs_wrap bgw">
+        	<p class="colorg">We want to design your profile as good as possible. Can you help us?</p>
+        	<form name="form" ng-submit="editProfile(user)" ng-model="form" style="color:black">
+        		<div class="col-md-6" style="padding:20px">
+	        	
+	        		<div class="form-group">
+		          		<input type="text" ng-model="user.name" placeholder="Name" class="form-control">
+		          	</div>
+		          	<div class="form-group">
+		          		<textarea class='autoExpand' rows='3' data-min-rows='3' placeholder='About' id="textarea" style="width:100%" ng-model="user.about" data-bind="hasfocus: true"></textarea>
+		          	</div>
+		          	<div class="form-group">
+		          		<input type="text" ng-model="user.proPic" placeholder="Profile Pic" class="form-control">
+		          		<img src="{{user.proPic}}" width="30%" height="auto" id="dp" style="margin:10px 35%">
+		          	</div>
+					
+					<br/>
+		         	
+		         
+		    	</div>
+		    	<div class="col-md-6" style="padding:20px">
+		    		<div class="form-group">
+		          		<input type="text" ng-model="user.galleryPic" placeholder="Event Cover" class="form-control">
+		          	</div>
+		          	<img src="{{user.galleryPic}}" width="100%" height="auto" >
+			    </div>
+	         	<button type="submit" class="b2w">Save</button>
+	        </form>
         </div>
         
       </div>
@@ -81,28 +102,29 @@
 <!--***************************Create Event ******************************************-->
 
 
-  <div class="modal img_modal fade" id="event" role="dialog">
+  <div class="modal img_modal fade col-md-11" id="event" role="dialog">
     <div class="modal-dialog img_modal-dialog" id="modal-center">
     
       <!-- Modal content-->
-     
+     	<div class="modal-header bgbl">
+	       <button type="button" class="close colorb" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">X</button>
+	       <h3 class="modal-title colorb">Can we know about your event</h3>
+	    </div>
         
-        <div class="modal-body img_modal-body glassy_thick col-md-10" style="margin:50px 8.3%;border:2px solid white" ng-if="club">
-        	<p>
-        		<h3 class="centric" >Create Event</h2>
-        		<button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
-        	</p>
+        <div class="modal-body img_modal-body col-md-12 thumbs_wrap " ng-if="club" >
+        	
         	<div class="col-md-6" style="border-right:2px solid white;padding:20px">
 	        	<form name="form" ng-submit="createEvent(form)" ng-model="form" style="color:black">
 	        		<div class="form-group">
-		          		<input type="text" ng-model="form.name" placeholder="Event Name" class="form-control">
+		          		<input type="text" ng-model="form.name" placeholder="Event Name" class="form-control" style="width:50%;float:left">
+		          	</div>
+		          	<div class="form-group">
+		          		<input type="text" ng-model="form.location" placeholder="Event Location" class="form-control" style="width:50%">
 		          	</div>
 		          	<div class="form-group">
 		          		<textarea class='autoExpand' rows='3' data-min-rows='3' placeholder='Description' id="textarea" style="width:100%" ng-model="form.description" data-bind="hasfocus: true"></textarea>
 		          	</div>
-		          	<div class="form-group">
-		          		<input type="text" ng-model="form.location" placeholder="Event Location" class="form-control">
-		          	</div>
+		          	
 		          	<div class="form-group">
 		          		<span style="color:white">Start Date</span>
 			          	<div >
@@ -114,6 +136,10 @@
 									</span>
 								</p>
 							</div> 
+							<div ng-controller="TimepickerDemoCtrl">
+
+							<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
+							</div>
 						</div>
 					</div>
 					<br/>
