--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -27,7 +27,18 @@
 }
 
 #login  {
-  width: 60%;
-  margin: 5% auto;
+  
+  padding: 10px;
+  width: 100%;
   color: rgba(0,0,0,0.7);
+  z-index: 10;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  
+}
+#login_wrapper{
+  padding: 10px 100px;
+  border-right: 1px solid grey;
+
 }
