--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -44,7 +44,7 @@
 	}
 	.post_div	{
 		position: relative;
-		padding: 20px 10px;
+		padding: 0px 10px 40px;
 		
 		/*margin: 30px 0px;*/
 		float: left;
@@ -82,7 +82,7 @@
 	.modal 	{
 		-webkit-filter: blur(0px);
   		filter: blur(0px);
-  		margin: 40px auto;
+  		margin: 40px auto 0px;
 	}
 	.modal-dialog	{
 		width:auto;
@@ -114,7 +114,7 @@
 	
 	}
 	.play img	{
-		width: 10%;
+		width: auto;
 		height:14%;
 		position: absolute;
 		bottom: 10%;
@@ -208,7 +208,7 @@
 	.glassy	{
 		color: rgba(255,255,255,0.7);
 		padding: 10px;
-		background-color: rgba(255,255,255,1);	
+		background-color: rgba(255,255,255,0);
 
 	}
 	.glassy_thick	{
