--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -106,20 +106,20 @@
     <div class="modal-dialog img_modal-dialog" id="modal-center">
     
       <!-- Modal content-->
-     	<div class="modal-header bgbl">
+     	<div class="modal-header bgw">
 	       <button type="button" class="close colorb" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">X</button>
 	       <h3 class="modal-title colorb">Can we know about your event</h3>
 	    </div>
         
-        <div class="modal-body img_modal-body col-md-12 thumbs_wrap " ng-if="club" >
-        	
-        	<div class="col-md-6" style="border-right:2px solid white;padding:20px">
-	        	<form name="form" ng-submit="createEvent(form)" ng-model="form" style="color:black">
-	        		<div class="form-group">
-		          		<input type="text" ng-model="form.name" placeholder="Event Name" class="form-control" style="width:50%;float:left">
+        <div class="modal-body img_modal-body col-md-12 thumbs_wrap bgw colorb " ng-if="club" >
+        	<form name="form" ng-submit="createEvent(form)" ng-model="form" style="color:black">
+        		<div class="col-md-6" style="border-right:2px solid white;padding:20px">
+	        	
+	        		<div class="form-group" style="width:50%;float:left">
+		          		<input type="text" ng-model="form.name" placeholder="Event Name" class="form-control" >
 		          	</div>
-		          	<div class="form-group">
-		          		<input type="text" ng-model="form.location" placeholder="Event Location" class="form-control" style="width:50%">
+		          	<div class="form-group" style="width:50%">
+		          		<input type="text" ng-model="form.location" placeholder="Event Location" class="form-control" >
 		          	</div>
 		          	<div class="form-group">
 		          		<textarea class='autoExpand' rows='3' data-min-rows='3' placeholder='Description' id="textarea" style="width:100%" ng-model="form.description" data-bind="hasfocus: true"></textarea>
@@ -136,7 +136,7 @@
 									</span>
 								</p>
 							</div> 
-							<div ng-controller="TimepickerDemoCtrl">
+							<div ng-controller="TimepickerDemoCtrl" ng-app="myAppApp">
 
 							<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
 							</div>
@@ -144,11 +144,11 @@
 					</div>
 					<br/>
 					<br/>
-					<div class="form-group">
-						<md-checkbox ng-model="endDateTF" aria-label="Checkbox 1" style="color:white">
+					<div class="form-group" ng-click="endDate()">
+						<md-checkbox ng-model="form.endDateTF" aria-label="Checkbox 1" >
 				          Add an End Date?
 				        </md-checkbox>
-				        <div ng-show="endDateTF">
+				        <div ng-show="form.endDateTF">
 		          			<span style="color:white">End Date</span><br>
 			          		<div class="col-md-6 datepckr" ng-controller="DatepickerDemoCtrl">
 					            <p class="input-group">
@@ -165,21 +165,37 @@
 					<!-- <div class="form-group">	
 						<input type="text" class="form-control upld_form" ng-model="form.tags" placeholder="Tag a category">
 					</div> -->
-					<div class="form-group">
+					
+					<br/>
+		         	
+			    </div>
+			    <div class="col-md-6" style="padding:20px">
+		    		<div class="form-group">
+		          		<input type="text" ng-model="form.galPic" placeholder="Event Cover" class="form-control">
+		          	</div>
+		          	<img src="{{form.galPic}}" width="100%" height="auto">
+		          	<md-checkbox ng-model="form.regReq" aria-label="Checkbox 1" >
+			          Is Registration Required?
+			        </md-checkbox>
+			        <md-checkbox ng-model="form.comp" aria-label="Checkbox 1" >
+			          Is it a competition?
+			        </md-checkbox>
+			        <md-checkbox ng-model="form.subOnl" aria-label="Checkbox 1"  ng-show="form.comp" style="margin:0px 50px">
+			          Is the submission online?
+			        </md-checkbox>
+			        <md-radio-group ng-model="form.submissionType" ng-show="form.subOnl">
+				      <md-radio-button value="Image" > Image</md-radio-button>
+				      <md-radio-button value="Video"> Video </md-radio-button>
+				      <md-radio-button value="Document"> Document</md-radio-button>
+				    </md-radio-group>
+		          	<div class="form-group">
 						<tags-input ng-model="form.vedik" add-on-paste="true" display-property="name" placeholder="Add the Vedik" add-from-autocomplete-only="true"  class="bootstrap" replace-spaces-with-dashes="false">
 	     			      <auto-complete source="loadTags($query)" max-results-to-show="10"></auto-complete>
 					    </tags-input>
 					</div>
-					<br/>
-		         	<button type="submit" class="b2w">Create</button>
-		         </form>
-		    </div>
-		    <div class="col-md-6" style="padding:20px">
-	    		<div class="form-group">
-	          		<input type="text" ng-model="form.galPic" placeholder="Event Cover" class="form-control">
-	          	</div>
-	          	<img src="{{form.galPic}}" width="100%" height="auto">
-		    </div>
+			    </div>
+		    <button type="submit" class="b2w" style="float:right">Create</button>
+		    </form>
         </div>
       
     </div>
@@ -254,7 +270,84 @@
 					</div>
 			</div>
   
+<!--*********************Broadcast**********************-->
+<div class="modal img_modal fade col-md-7" id="broadcast" role="dialog">
+    <div class="modal-dialog img_modal-dialog" id="modal-center">
+    
+      <!-- Modal content-->
+     
+     	<div class="modal-header bgw">
+	       <button type="button" class="close colorb" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">X</button>
+	       <h3 class="modal-title colorb">Broadcast</h3>
+	    </div>
+        
+        <div class="modal-body img_modal-body col-md-12 thumbs_wrap bgw">
 
+		  <div class="thumbs_wrap col-md-12"  style="border:2px solid white;padding:10px;">
+            
+            <div >
+              <ul class="nav nav-tabs" style="width:40%;">
+                <li  class="active"><a href="#article_up" data-toggle="tab" style="padding:0px"><span class="glyphicon glyphicon-open" style="padding:6px 5px"></span> Post</a></li>               
+                <li ><a href="#image_up" data-toggle="tab" style="padding:0px"><span class="glyphicon glyphicon-open" style="padding:6px 5px"></span> Image</a></li>
+                <li ><a href="#video_up" data-toggle="tab" style="padding:0px"><span class="glyphicon glyphicon-open" style="padding:6px 5px" ></span> Video</a></li>
+              </ul>
+              	<form name="form"  ng-model="form">
+                  <div class="tab-content">
+                      <div class="tab-pane fade in active" id="upload_form2">
+                    
+                        <div class="col-md-6">
+                          	<div class="form-group">
+	                      	   <input type="text" class="form-control upld_form" ng-model="event.name" placeholder="Name" disabled>
+	                     	</div>
+	                     	<div class="form-group">
+	                        	<textarea class='autoExpand form-control' rows='3' data-min-rows='3' placeholder='Description' id="textarea" style="width:100%" ng-model="fevent.description" data-bind="hasfocus: true" disabled>
+	                          </textarea>                       
+                        	</div>
+                        </div>
+                        
+                      
+                        <div class="col-md-6"> 
+                          	<div class="tab-content">
+	                            <div id="article_up" class="tab-pane fade in active">
+	                                <button type="submit" class="b2w" ng-click="BPost()">Submit</button>
+	                            </div>
+		                        <div id="image_up" class="tab-pane fade">
+		                            <div class="form-group">  
+		                              <input type="text" class="form-control upld_form" ng-model="form.picUrl" placeholder="Image Url">
+		                            </div>
+		                            <img src="{{form.picUrl}}" width="100%" height="auto">
+		                            <button type="submit" class="b2w" ng-click="BImage(form)">Submit</button>
+		                        </div>
+		                        <div id="video_up" class="tab-pane fade">
+		                            <div class="form-group">
+		                                        
+		                              <input type="text" class="form-control upld_form" ng-model="form.vidUrl" placeholder="Youtube link to video">
+		                            </div>
+		                            <div class="form-group">              
+		                              <input type="text" class="form-control upld_form" ng-model="form.posterUrl" placeholder="Poster Url">
+		                            </div>
+		                            <img src="{{form.posterUrl}}" width="100%" height="auto">
+		                            <button type="submit" class="b2w" ng-click="BVideo()">Submit</button>
+		                        </div>
+                      		</div>
+                      	</div>
+                      
+                        
+                          
+                        
+
+                    </div>
+                 
+                  </div>
+                </form>
+            </div>
+
+        </div>
+       </div>
+     </div>
+</div>
+
+<!--***********Broadcast closes***************************************************************-->
 
 <!--***********************************upload section******************************************-->
 	        								
@@ -666,22 +759,17 @@
 			       <table>
 			       		<tr ng-repeat="credit in credit">
 			       			<td style="width:25%">
-			       				<div  layout="column" ng-cloak>
-								  <md-content class="md-padding" layout="column">
-				       				<md-chips>
-				       				<md-chip >{{credit.credit.creditDetail}}</md-chip>
-				       				</md-chips>
-				       				</md-content>
-								</div>
+			       				<ul class="nav nav-tabs floatL">
+								    <li class="btnbg rlmargin"><a data-toggle="tab" href="#booked_display">{{credit.credit.creditDetail}}</a></li>
+								    								    
+								</ul>
 			       			</td>
-			       			<td>					       				
-								<div  layout="column" ng-cloak>
-								  <md-content class="md-padding" layout="column">
-								    <md-chips ng-repeat="creditedUsers in credit.creditedUsers">
-								      <md-chip>{{creditedUsers.user.name}}</md-chip>									     
-								    </md-chips>											   
-								  </md-content>
-								</div>
+			       			<td>
+			       				<ul class="nav nav-tabs floatL">
+								    <li class="btnbg rlmargin" ng-repeat="creditedUsers in credit.creditedUsers"><a data-toggle="tab" href="#booked_display">{{creditedUsers.user.name}}</a></li>
+								    								    
+								</ul>					       				
+								
 			       			</td>
 			       		</tr>
 			       </table>
@@ -899,23 +987,15 @@
 						       <table>
 						       		<tr ng-repeat="credit in credit">
 						       			<td style="width:25%">
-						       				<div  layout="column" ng-cloak>
-											  <md-content class="md-padding" layout="column">
-							       				<md-chips>
-							       				<md-chip >{{credit.credit.creditDetail}}</md-chip>
-							       				</md-chips>
-							       				</md-content>
-											</div>
+						       				
+							       				{{credit.credit.creditDetail}}
+							       				
 						       			</td>
 						       			<td>					       				
-											<div  layout="column" ng-cloak>
-											  <md-content class="md-padding" layout="column">
-											    <md-chips ng-repeat="creditedUsers in credit.creditedUsers">
-											      <md-chip>{{creditedUsers.user.name}}</md-chip>									     
-											    </md-chips>											   
-											  </md-content>
-											</div>
-						       			</td>
+											
+											   
+											      <span ng-repeat="creditedUsers in credit.creditedUsers">{{creditedUsers.user.name}}</span>
+										</td>				
 						       		</tr>
 						       </table>
 						    </div>
