--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -65,7 +65,8 @@ body {
             float:right;
             display:inline;
             padding:16px 30px;
-            font-family: "times new roman", arial;
+            font-family: arial;
+            letter-spacing: 0;
         }
         #logo a:visited{
             color: rgb( 1, 182, 255 ) !important;
@@ -168,7 +169,7 @@ li:hover#nav_li, li:active#nav_li{
 #search .form-control   {
     width:400px;
     height:25px;
-    padding:4px 10px;
+    padding:4px 25px;
 }
 #caretid    {
     margin:20px 0px;
