--- a/client/components/modal/modal.css
+++ b/client/components/modal/modal.css
@@ -49,14 +49,12 @@
 
 .bootstrap .tags .tag-item {
 	text-align: left;
-
-  background: #428bca;
-
-  border: 1px solid #357ebd;
-
-  border-radius: 4px;
-
-  color: #fff;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 0px;
+  color: black;
+  font-size: 12px;
+  padding: 0px 10px;
 
 }
 
@@ -89,6 +87,8 @@
 .bootstrap .autocomplete {
 	text-align: left;
   border-radius: 0px;
+  margin: 0px;
+  padding: 0px;
 
 }
 
@@ -100,6 +100,7 @@
   color: #262626;
 
   background-color: #e9e9e9;
+  padding: 15px 10px;
 
 }
 
@@ -110,17 +111,17 @@
 	font-size: 
   font-weight: bold;
 
-  background-color: none;
+  background-color: white;
+
 
 }
 
 .bootstrap .autocomplete .suggestion-item  {
 	font-size: 12px;
  
-  font-weight: bold;
 
   background-color: none;
-
+  padding: 15px 10px;
 }
 
 
@@ -129,7 +130,7 @@
 
   color: #262626;
 
-  background-color: white;
+  background-color: #e9e9e9;
 
 }
 
