--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -31,15 +31,32 @@
 	.notif_div_wrap	{
 		padding: 0px;
 		
-		height:90px;
-		box-shadow: 1px 1px 5px black;
+		height:75px;
+		
 			}
 	#img_post 	{
 		position: absolute;
-			
+		
 		width: 100%;
 		height: auto;
 		 transition: all 0.3s ease 0s;
+		
+	}
+
+     #notif_back{
+ 	  	padding: 10px 0px;
+	    overflow: hidden;
+	    height: 75px;
+	    line-height: 20px;
+	}
+     
+    #notif_img{
+		width: auto;
+		max-width: 100px;
+		height: 100%;
+		margin: 0px auto;
+    	display: block;
+}
 		
 	}
 	.post_div	{
@@ -53,7 +70,9 @@
 		position: relative;		
 		/*margin: 30px 0px;*/
 		float: left;
-		padding: 2px 0px;
+		padding: 0px;
+		border-bottom: 2px solid white;	
+		background-color: rgba(0,0,0,0.1);
 	}
 	.w2bfade	{
 		display: block;
@@ -68,7 +87,34 @@
 		z-index: 10;
 		font-size: 17px;
 		color: white;
+		line-height: 15px;
 	}
+	#notif_name	{
+		position: absolute;
+		top: 10px;
+		left: 10px;
+		z-index: 10;
+		font-size: 11px;
+		color: black;
+		line-height: 13px;
+	}
+	#notif_uploader{
+		font-size: 11px;
+		color: rgba(0,0,0,0.5);
+	}
+	#notif_desc{
+		font-size: 10px;
+		color: rgba(0,0,0,0.5);
+		line-height: 15px;
+		position: absolute;
+		text-overflow:ellipsis;
+		white-space: nowrap;
+		left: 10px;
+		width: 286px;
+		bottom: 5px;
+		overflow: hidden;
+	}
+	
 	.close	{
 		margin: 0px 5px;
 		position: absolute;
@@ -114,6 +160,17 @@
 		width: 100%;
 	
 	}
+	
+	
+	 .notif_icon {
+		width: auto;
+		height:12px;
+		padding: 0px 5px 0px 0px;	
+		
+		z-index: 2;
+		margin: 0px auto;
+		
+	 }
 	.play img	{
 		width: auto;
 		height:14%;
@@ -316,3 +373,9 @@
      .cursorp{
      	cursor: pointer;
      }
+.center-cropped {
+  object-fit: none; /* Do not scale the image */
+  object-position: center; /* Center the image within the element */
+  height: 100px;
+  width: 100px;
+}
