--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -58,10 +58,10 @@
     	display: block;
 }
 		
-	}
+	
 	.post_div	{
 		position: relative;
-		padding: 0px 10px 40px;
+		padding: 0px 10px 20px;
 		
 		/*margin: 30px 0px;*/
 		float: left;
@@ -234,6 +234,7 @@
 	}
 	#article	{
 		min-height: auto;
+		line-height: 30px;
 	}
 
 	/*#event_det div {
@@ -353,6 +354,9 @@
      }
      .bgbl{
      	background-color: rgb(1,192,255);
+     }
+     .bglg{
+     	background-color: rgb(220,220,220);
      }
      /*font size*/
      .sizeten{
